--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "author": "undefined",
     "license": "AGPL-3.0-only",
     "dependencies": {
+        "hydrooj": "^2.13.10",
+        "moment": "^2.28.0"
     }
 }
