--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "author": "undefined",
     "license": "AGPL-3.0-only",
     "dependencies": {
+        "alipay-sdk": "^3.1.4",
         "hydrooj": "^2.13.10",
-        "moment": "^2.28.0"
+        "moment": "^2.29.0",
+        "mongodb": "^3.6.2"
     }
 }
