--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "author": "undefined",
     "license": "AGPL-3.0-only",
     "dependencies": {
+        "adm-zip": "^0.4.16",
         "hydrooj": "^2.13.10",
-        "moment": "^2.28.0"
+        "mongodb": "^3.6.3"
     }
 }
