--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@hydrooj/customize-2",
+    "name": "@hydrooj/customize",
     "version": "1.0.0",
     "description": "customize",
     "main": "package.json",
