--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
     "main": "package.json",
     "repository": "https://github.com/hydro-dev/customize.git",
     "author": "undefined",
-    "license": "AGPL-3.0-only",
-    "dependencies": {
-        "hydrooj": "^2.13.10",
-        "moment": "^2.28.0"
-    }
+    "license": "SEE LICENSE IN LICENSE",
+    "dependencies": {}
 }
